--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <a class="navanch" href="./artists/Main.html">Artists</a>
                 </li>
                 <li class="menu-item">
-                    <a class="navanch" href="./artists/Main.html">Album</a>
+                    <a class="navanch" href="#">Album</a>
                     <ol class="sub-menu">
                         <li class="menu-item"><a class="navanch" href="./albums/Trending.html">Trending</a></li>
                         <li class="menu-item"><a class="navanch" href="./albums/Hot on Musicclub.html">Hot</a></li>
